<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/top1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/customer_nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/unblock_employee" />

        <item
            android:id="@+id/customer_nav_popular"
            android:title="@string/popular"
            android:icon="@drawable/ic_popular" />

        <item
            android:id="@+id/customer_nav_changePWD"
            android:title="@string/change_pwd"
            android:icon="@drawable/ic_password" />

        <item
            android:id="@+id/customer_nav_orders"
            android:title="@string/orderz"
            android:icon="@drawable/ic_order_note" />

    </group>

    <group
        android:id="@+id/top2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/customer_nav_report"
            android:title="@string/report"
            android:icon="@drawable/ic_report" />

        <item
            android:id="@+id/customer_nav_logout"
            android:title="@string/logout_menu"
            android:icon="@drawable/logout_icon" />

    </group>

</menu>