<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/top1">

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/unblock_employee" />

        <item
            android:id="@+id/nav_change_password"
            android:title="@string/change_pwd"
            android:icon="@drawable/ic_password" />

    </group>


    <group
        android:id="@+id/top2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_about_app"
            android:title="@string/about_application"
            android:icon="@drawable/aboutapp" />

        <item
            android:id="@+id/nav_contactDev"
            android:title="@string/contact_developer"
            android:icon="@drawable/developericon" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout_menu"
            android:icon="@drawable/logout_icon" />

    </group>

</menu>