<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calmYellow"
    android:orientation="vertical"
    tools:context="com.cust.sipnsnack.Bikers.ManageBikers">

    <ImageView
        android:id="@+id/backBTN"
        android:src="@drawable/back_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"/>


    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/biorhyme_bold"
        android:text="BIKERS"
        android:textColor="@color/matteBlack"
        android:textSize="30dp" />


    <TextView
        android:id="@+id/urdutv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/biorhyme_bold"
        android:text="@string/bikers"
        android:textColor="@color/matteBlack"
        android:textSize="30dp" />


    <RelativeLayout
        android:id="@+id/main1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/half_rounded_select_items"
        android:padding="14dp">


        <Button
            android:id="@+id/addBikersBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button_items"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/addBikers"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <Button
            android:id="@+id/viewBikersBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addBikersBtn"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_button_items"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/viewBikers"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </RelativeLayout>


</LinearLayout>