<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cust.sipnsnack.Bikers.EditBikerProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">


        <RelativeLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/calmYellow"
            android:padding="10dp">

            <TextView
                android:id="@+id/engTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/biorhyme_bold"
                android:text="EDIT PROFILE"
                android:textColor="@color/matteBlack"
                android:textSize="16dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/engTV"
                android:layout_weight="1"
                android:fontFamily="@font/biorhyme_bold"
                android:text="@string/editProfile"
                android:textColor="@color/matteBlack"
                android:textSize="16dp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageView
                    android:id="@+id/infoiconIV"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:background="@drawable/blueinfologo" />

            </RelativeLayout>

        </RelativeLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/custName"
            android:layout_marginTop="15dp"
            android:hint="@string/enterUsername"
            android:textColorHint="@color/et_hint"
            app:hintTextColor="@color/matteBlack"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:hintTextAppearance="@style/HintSize">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateProfile_UsernameET"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
                android:maxLength="30">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/customerName"
            android:layout_marginTop="10dp"
            android:hint="@string/enterName"
            android:textColorHint="@color/et_hint"
            app:hintTextColor="@color/matteBlack"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:hintTextAppearance="@style/HintSize">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateProfile_NameET"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
                android:maxLength="30">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:id="@+id/customerPhone"
            android:hint="@string/enterPhone"
            android:textColorHint="@color/et_hint"
            app:boxStrokeColor="@color/matteBlack"
            app:hintTextColor="@color/matteBlack"
            app:hintTextAppearance="@style/HintSize">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/updateProfile_PhoneNoET"
                android:digits="0123456789"
                android:maxLength="20">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:id="@+id/customerAddress"
            android:hint="@string/enterAddress"
            android:textColorHint="@color/et_hint"
            app:boxStrokeColor="@color/matteBlack"
            app:hintTextColor="@color/matteBlack"
            app:hintTextAppearance="@style/HintSize">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="5"
                android:id="@+id/updateProfile_AddressET"
                android:maxLength="100">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/itemsButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/profileUpdateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button_yellow"
                android:fontFamily="@font/biorhyme_bold"
                android:text="UPDATE"
                android:textColor="@color/matteBlack"
                android:textSize="21sp" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>